--- a/app/views/qa_activities/show.html.erb
+++ b/app/views/qa_activities/show.html.erb
@@ -40,6 +40,6 @@
   <%= @qa_activity.sponsor %>
 </p>
 
-
+<%=render 'qa_clients/list'%>
 <%= link_to 'Edit', edit_qa_activity_path(@qa_activity) %> |
 <%= link_to 'Back', qa_activities_path %>
