--- a/app/views/qa_clients/show.html.erb
+++ b/app/views/qa_clients/show.html.erb
@@ -15,6 +15,6 @@
   <%= @qa_client.qq %>
 </p>
 
-
+<%=render 'qa_activities/list'%>
 <%= link_to 'Edit', edit_qa_client_path(@qa_client) %> |
 <%= link_to 'Back', qa_clients_path %>
