--- a/app/views/qa_activities/show.html.erb
+++ b/app/views/qa_activities/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Title:</b>
+  <%= @qa_activity.title %>
+</p>
+
+<p>
   <b>Hold at:</b>
   <%= @qa_activity.hold_at %>
 </p>
